first molecule herobanner

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,9 @@
-<router-outlet></router-outlet>
+<body>
+  <!-- <router-outlet></router-outlet> -->
+  <app-herobanner></app-herobanner>
+</body>
+
+
 
 <!-- <style>
   :host {
