--- a/src/app/components/atoms/button/button.css
+++ b/src/app/components/atoms/button/button.css
@@ -7,50 +7,50 @@
   border-radius: 5px;
   display: inline-block;
   box-shadow: rgba(0, 0, 0, 0.2) 0rem 0.3rem 0.6rem;
+}
+
+.btn-blue {
+  background-color: hsl(231, 69%, 60%);
+  color: white;
+  font-weight: 400;
+  border: 1px solid #ffffff00;
+}
+
+.btn-blue:hover {
+  background-color: white;
+  color: hsl(231, 69%, 60%);
+  border: 1px solid hsl(231, 69%, 60%);
+}
+
+.btn-light {
+  background-color: #f9f9f9;
+  color: #333;
+  border: 1px solid #ccc;
+  font-weight: 400;
+}
   
-  &-blue {
-    background-color: hsl(231, 69%, 60%);
-    color: white;
-    font-weight: 400;
-    border: 1px solid #ffffff00;
-    
-    &:hover {
-      background-color: white;
-      color: hsl(231, 69%, 60%);
-      border: 1px solid hsl(231, 69%, 60%);
-    }
-  }
-  
-  &-light {
-    background-color: #f9f9f9;
-    color: #333;
-    border: 1px solid #ccc;
-    font-weight: 400;
-    
-    &:hover {
-      background-color: white;
-      color: rgb(54, 51, 51);
-      border: 1px solid rgb(54, 51, 51);
-    }
-  }
-  
-  &-red {
-    background-color: hsl(0, 94%, 66%);
-    color: white;
-    font-size: 1.1rem;
-    text-transform: uppercase;
-    font-weight: 500;
-    width: 120px;
-    border: 1px solid #ffffff00;
-    
-    &:hover {
-      background-color: white;
-      color: hsl(0, 94%, 66%);
-      border: 1px solid hsl(0, 94%, 66%);
-    }
-  }
-  
-  &-download {
-    font-size: 14px;
-  }
+.btn-light:hover {
+  background-color: white;
+  color: rgb(54, 51, 51);
+  border: 1px solid rgb(54, 51, 51);
+}
+
+.btn-red {
+  background-color: hsl(0, 94%, 66%);
+  color: white;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  width: 120px;
+  border: 1px solid #ffffff00;
+}
+
+.btn-red:hover {
+  background-color: white;
+  color: hsl(0, 94%, 66%);
+  border: 1px solid hsl(0, 94%, 66%);
+}
+
+.download {
+  font-size: 14px;
 }
