--- a/src/app/components/atoms/button/button.css
+++ b/src/app/components/atoms/button/button.css
@@ -7,6 +7,7 @@
   border-radius: 5px;
   display: inline-block;
   box-shadow: rgba(0, 0, 0, 0.2) 0rem 0.3rem 0.6rem;
+  margin: 0.75rem;
 }
 
 .btn-blue {
