--- a/src/app/components/atoms/tab-button/tab-button.html
+++ b/src/app/components/atoms/tab-button/tab-button.html
@@ -1,1 +1,5 @@
-<p>tab-button works!</p>
+<button 
+  [class]="'tab' + (isActive ? ' active' : '')"
+  (click)="onTabClick()">
+  {{text}}
+</button>
