Add featureimage and subtitle components + implement tab-nav component with functionality

--- a/src/app/components/molecules/featuresbanner/featuresbanner.html
+++ b/src/app/components/molecules/featuresbanner/featuresbanner.html
@@ -1,1 +1,9 @@
-<p>featuresbanner works!</p>
+<div class="features-header">
+  <app-heading 
+    [level]="2" 
+    [text]="title"
+    cssClass="features-h2">
+  </app-heading>
+  
+  <app-subtitle [text]="subtitle"></app-subtitle>
+ </div>
