Add features section

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,9 @@
 <body>
   <!-- <router-outlet></router-outlet> -->
   <app-herobanner></app-herobanner>
+  <app-features-section
+    [sectionTitle]="'Features'">
+  </app-features-section>
 </body>
 
 
