--- a/src/app/components/atoms/featureimage/featureimage.html
+++ b/src/app/components/atoms/featureimage/featureimage.html
@@ -1,3 +1,3 @@
 <div class="feature-image">
-  <img [src]="src" [alt]="alt" />
+  <img [src]="'./src/assets/images/illustration-features-tab' + src" [alt]="alt" />
  </div>
