--- a/src/app/components/molecules/herobanner/herobanner.html
+++ b/src/app/components/molecules/herobanner/herobanner.html
@@ -22,7 +22,7 @@
       </app-button>
 
       <app-image
-        [src]="'../../../assets/images/illustration-hero.svg'"
+        [src]="'src/assets/images/illustration-hero.svg'"
         [alt]="'Hero image'"
         [cssClass]="'hero-image'">
       </app-image>
