--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <body>
   <!-- <router-outlet></router-outlet> -->
-  <app-herobanner></app-herobanner>
+  <app-herobanner-section></app-herobanner-section>
   <app-features-section
     [sectionTitle]="'Features'">
     
