herobanner-section ts reorganized with divs and styles

--- a/src/app/components/organisms/herobanner-section/herobanner-section.css
+++ b/src/app/components/organisms/herobanner-section/herobanner-section.css
@@ -1,23 +1,49 @@
-.hero-grid {
-grid-template-columns: 1fr;
-text-align: center;
-padding: 0;
+.container {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 2rem;
 }
 
-/* .hero-grid {
-display: grid;
-grid-template-columns: 1fr 1fr;
-align-items: center;
-gap: 2rem;
-padding: 0 8rem;
+.hero-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 2rem;
+  padding: 0 8rem;
+}
+
+.hero-buttons {
+  margin-top: 1rem;
+  display: flex;
+  gap: 1rem;
+}
+
+
+/* PENDING TO RESOLVE
+ .hero-image {
+  order: -1; 
 } */
-@media screen and (min-width: 768px) {
+
+@media screen and (max-width: 768px) {
   .hero-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    text-align: left;
-    padding: 0 5rem;
-    gap: 2rem;
+    grid-template-columns: 1fr;
+    text-align: center;
+    padding: 0;
   }
+
+  .hero-image {
+    order: -1; 
+  }
+
+  .hero-buttons {
+  font-size: 1.1rem;
+  margin-top: 2rem;
+  justify-content: center;
+  }
+
+  .hero-buttons .btn {
+  width: auto;
+  padding: 0.9rem 0.7rem;
+  } 
+
 }
