--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,17 +1,18 @@
 * {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-}
-
-html, body {
-width: 100%;
-overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-font-family: Rubik, sans-serif;
-color: rgb(37, 43, 70);
-line-height: 1.6;
-scroll-behavior: smooth;
+  font-family: Rubik, sans-serif;
+  color: rgb(37, 43, 70);
+  line-height: 1.6;
+  scroll-behavior: smooth;
+}
+
+.container {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 2rem;
 }
