--- a/src/app/components/molecules/buttons-div/buttons-div.css
+++ b/src/app/components/molecules/buttons-div/buttons-div.css
@@ -1,13 +1,17 @@
 .hero-buttons {
-font-size: 1.1rem;
-margin-top: 2rem;
+  display: flex;
+  gap: 1rem;
 }
 
-.hero-buttons {
-justify-content: center;
-}
-
-.hero-buttons .btn {
-width: auto;
-padding: 0.9rem 0.7rem;
+@media screen and (max-width: 768px) {
+  .hero-buttons {
+    font-size: 1.1rem;
+    margin-top: 2rem;
+    justify-content: center;
+    
+    .btn {
+      width: auto;
+      padding: 0.9rem 0.7rem;
+    }
+  }
 }
