--- a/src/app/components/molecules/features-content/features-content.css
+++ b/src/app/components/molecules/features-content/features-content.css
@@ -14,6 +14,11 @@
   margin: 1em 0;
 }
 
+.features-features-h2 {
+text-align: center;
+}
+
+
 @media screen and (max-width: 768px) {
   .feature-content {
     flex-direction: column;
