featuresbanner divs and css reorganized

--- a/src/app/components/molecules/features-content/features-content.css
+++ b/src/app/components/molecules/features-content/features-content.css
@@ -14,9 +14,16 @@
   margin: 1em 0;
 }
 
-.features-features-h2 {
+.h2 {
 text-align: center;
 }
+
+.feature-image {
+margin-left: 4em;
+margin: 0 4%;
+}
+
+
 
 
 @media screen and (max-width: 768px) {
