--- a/src/app/components/organisms/features-section/features-section.html
+++ b/src/app/components/organisms/features-section/features-section.html
@@ -1,24 +1,28 @@
-<section class="features">
+<section class="features" id="features">
   <div class="container">
     <app-features-header
       [title]="sectionTitle"
       [subtitle]="subtitle">
     </app-features-header>
 
-    <app-tab-nav
-      [tabs]="tabs"
-      [activeTabId]="activeTabId"
-      (tabChange)="onTabChange($event)">
-    </app-tab-nav>
-    
-    <app-features-content
-      [imageSrc]="currentFeature.imageSrc"
-      [imageAlt]="currentFeature.imageAlt"
-      [title]="currentFeature.title"
-      [description]="currentFeature.description"
-      [buttonText]="currentFeature.buttonText || 'More Info'"
-      [buttonHref]="currentFeature.buttonHref || '#'"
-      [showButton]="!!currentFeature.buttonText">
-    </app-features-content>
+    <div class="tabs">
+      <app-tab-nav
+        [tabs]="tabs"
+        [activeTabId]="activeTabId"
+        (tabChange)="onTabChange($event)">
+      </app-tab-nav>
+    </div>
+
+    <div class="feature-content">
+      <app-features-content
+        [imageSrc]="currentFeature.imageSrc"
+        [imageAlt]="currentFeature.imageAlt"
+        [title]="currentFeature.title"
+        [description]="currentFeature.description"
+        [buttonText]="currentFeature.buttonText || 'More Info'"
+        [buttonHref]="currentFeature.buttonHref || '#'"
+        [showButton]="!!currentFeature.buttonText">
+      </app-features-content>
+    </div>
   </div>
  </section>
