--- a/src/app/components/molecules/features-content/features-content.html
+++ b/src/app/components/molecules/features-content/features-content.html
@@ -1,24 +1,26 @@
- <div class="feature-content">
-  <app-featureimage
-    [src]="imageSrc"
-    [alt]="imageAlt">
-  </app-featureimage>
+<div class="feature-content">
+  <div class="feature-image">
+    <app-featureimage 
+      [src]="imageSrc"
+      [alt]="imageAlt">
+    </app-featureimage>
+  </div>
   
   <div class="feature-text">
-    <app-heading 
+    
+    <app-heading
       [level]="2" 
       [text]="title">
     </app-heading>
     
-    <app-text [content]="description"></app-text>
+    <app-text 
+      [content]="description">
+    </app-text>
     
-    @if (showButton) {
-      <app-button
+    <app-button class="btn btn-blue btn-none"
         variant="blue"
         [href]="buttonHref"
-        [text]="buttonText"
-        additionalClasses="btn-none">
-      </app-button>
-    }
+        [text]="buttonText">
+    </app-button>
   </div>
  </div>
