--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,10 @@
 <body>
   <!-- <router-outlet></router-outlet> -->
+  <app-desktop-header-section>
+  </app-desktop-header-section>
+  
   <app-herobanner-section></app-herobanner-section>
+  
   <app-features-section
     [sectionTitle]="'Features'">
   </app-features-section>
