--- a/src/app/components/atoms/button/button.css
+++ b/src/app/components/atoms/button/button.css
@@ -1,4 +1,4 @@
-/* .btn {
+.btn {
   padding: 0.75rem 1.5rem;
   border: none;
   text-decoration: none;
@@ -42,8 +42,9 @@
   font-size: 1.1rem;
   text-transform: uppercase;
   font-weight: 500;
-  width: 120px;
+  width: 100px;
   border: 1px solid #ffffff00;
+  text-align: center;
 }
 
 .btn-red:hover {
@@ -54,7 +55,7 @@
 
 .download {
   font-size: 14px;
-} */
+
 
 /* Estilos base para botones normales */
 .btn {
