--- a/src/app/components/molecules/desktop-nav/desktop-nav.css
+++ b/src/app/components/molecules/desktop-nav/desktop-nav.css
@@ -1,5 +1,9 @@
 nav {
-  @media screen and (max-width: 768px) {
+  
+}
+
+@media screen and (max-width: 768px) {
+  nav {
     display: none;
   }
 }
@@ -9,19 +13,20 @@ nav {
   list-style: none;
   gap: 2rem;
   text-transform: uppercase;
+}
 
-  li {
-    padding-top: 8px;
-  }
+.nav-menu li {
+  padding-top: 5px;
+  align-self: center;
+}
 
-  a {
-    text-decoration: none;
-    color: #2b2b2b;
-    font-weight: 400;
-    transition: color 0.3s ease;
+.nav-menu a {
+  text-decoration: none;
+  color: #2b2b2b;
+  font-weight: 500;
+  transition: color 0.3s ease;
+}
 
-    nav-menu:hover {
-      color: #a51616;
-    }
-  }
+.nav-menu a:hover {
+  color: hsl(0, 94%, 66%);
 }
