--- a/src/app/components/organisms/desktop-header-section/desktop-header-section.css
+++ b/src/app/components/organisms/desktop-header-section/desktop-header-section.css
@@ -1,6 +1,6 @@
 .container {
  max-width: 100%;
- margin: 0 auto;
+ margin: 0 2rem;
  padding: 2rem;
 }
  
@@ -9,6 +9,7 @@
  justify-content: space-between;
  align-items: center;
  background-color: white;
+ 
 }
 
 @media screen and (max-width: 768px) {
