Hamburger icon implemented, functionality pending

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,6 @@
 <body>
   <!-- <router-outlet></router-outlet> -->
-  <app-desktop-header-section>
-  </app-desktop-header-section>
+  <app-desktop-header-section></app-desktop-header-section>
   
   <app-herobanner-section></app-herobanner-section>
   
