--- a/src/app/components/organisms/desktop-header-section/desktop-header-section.html
+++ b/src/app/components/organisms/desktop-header-section/desktop-header-section.html
@@ -5,16 +5,15 @@
         logoClass="logo">
     </app-logo>
       
-    <!-- <app-button
+    <app-button
         variant="hamburger"
-        customClass="hamburger"
+        text="☰"
         (onClick)="onHamburgerClick()">
         ☰
-    </app-button> -->
-      
+    </app-button>
+    
     <app-desktop-nav
-        [navLinks]="navLinks"
-        (loginClick)="onLoginClick()">
+        [navLinks]="navLinks">
     </app-desktop-nav>
     
 </div>
