--- a/src/app/components/molecules/mobile-nav/mobile-nav.html
+++ b/src/app/components/molecules/mobile-nav/mobile-nav.html
@@ -1,12 +1,16 @@
 <nav>
-      <ul class="nav-menu">
-        <li *ngFor="let link of navLinks">
-          <a [href]="link.href">{{ link.text }}</a>
-        </li>
-        <app-button
-          variant="red"
-          (onClick)="onLoginClick()">
-          Login
-        </app-button>
-      </ul>
+  <ul class="nav-menu">
+    @for (link of navLinks; track link.href) {
+      <li>
+        <a [href]="link.href">{{ link.text }}</a>
+      </li>
+    }
+
+    <app-button
+      variant="red"
+      (onClick)="onLoginClick()">
+      Login
+    </app-button>
+    
+  </ul>
 </nav>
