--- a/src/app/components/organisms/desktop-header-section/desktop-header-section.html
+++ b/src/app/components/organisms/desktop-header-section/desktop-header-section.html
@@ -20,6 +20,8 @@
 <app-mobile-nav
   [isOpen]="isMobileNavOpen"
   [navLinks]="navLinks"
+  [socialLinks]="socialLinks"
   (closeClick)="onMobileMenuClose()"
-  (loginClick)="onLoginClick()">
+  (loginClick)="onLoginClick()"
+  (socialClick)="onSocialClick($event)">
 </app-mobile-nav>
