--- a/src/app/components/molecules/mobile-nav/mobile-nav.css
+++ b/src/app/components/molecules/mobile-nav/mobile-nav.css
@@ -35,7 +35,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   padding: 0 30px;
 }
 
