--- a/src/app/components/organisms/desktop-header-section/desktop-header-section.css
+++ b/src/app/components/organisms/desktop-header-section/desktop-header-section.css
@@ -1,3 +1,9 @@
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+
 .container {
  max-width: 100%;
  margin: 0 2rem;
@@ -23,10 +29,24 @@
 display: none;
 }
 
+.header {
+    background: white;
+    padding: 0 5rem;
+    position: sticky;
+    z-index: 99;
+    width: 100%;
+    left: 0;
+    top: 0;
+}
+
 @media screen and (max-width: 768px) {
     .nav-container {
     flex-direction: column;
     align-items: flex-start;
+    }   
+
+    .header {
+    padding: 0 0;
     }
 }
 
