--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+  font-family: Rubik, sans-serif;
+  color: rgb(37, 43, 70);
+  line-height: 1.6;
+  scroll-behavior: smooth;
+}
