Card section ready

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,5 +6,7 @@
     <app-features-section
         [sectionTitle]="'Features'">
     </app-features-section>
+
+    <app-extensions-section></app-extensions-section>
   </main>
   
