--- a/src/app/components/molecules/card/card.css
+++ b/src/app/components/molecules/card/card.css
@@ -15,10 +15,9 @@
 
 .dots-image {
     width: 100%;
-    margin-top: 3em;
 }
 
-.card .btn-blue {
+.btn-blue {
     margin: 1em;
 
 } 
@@ -43,6 +42,7 @@
     color: hsl(231, 69%, 60%);
     border: 1px solid hsl(231, 69%, 60%);
 }
+
 
 
 @media screen and (max-width: 768px) {
