--- a/src/app/components/molecules/card/card.html
+++ b/src/app/components/molecules/card/card.html
@@ -1,14 +1,16 @@
 <div class="card ladder">
-    <img src="assets/logos/logo-chrome.svg" alt="Chrome Logo" />
-    <h3>Add to Chrome</h3>
-    <p>Minimum version 62</p>
+    <img [src]="logo" [alt]="" />
+    <h3>Add to {{ browser }}</h3>
+    <p>Minimum version {{ versionNumber }}</p>
     <img class="dots-image" src="assets/images/bg-dots.svg" alt="Background dots" />
         
     <div>
         <app-button
+            variant = 'blue'
+            type = 'button'
             href = '#'
             text = 'Add & Install Extension'
-            additionalClasses = "btn btn-blue btn-download"> 
+            additionalClasses=".card .btn-blue .btn-download">
         </app-button>
     <div>
 </div>
