--- a/src/app/components/molecules/features-header/features-header.html
+++ b/src/app/components/molecules/features-header/features-header.html
@@ -5,5 +5,8 @@
     cssClass="features-h2">
   </app-heading>
   
-  <app-subtitle [text]="subtitle"></app-subtitle>
+  <app-subtitle 
+    [text]="subtitle">  
+  </app-subtitle>
+  
  </div>
