--- a/src/app/components/molecules/features-header/features-header.css
+++ b/src/app/components/molecules/features-header/features-header.css
@@ -5,3 +5,12 @@
 .features-h2 {
   text-align: center;
 }
+
+
+@media screen and (max-width: 768px) {
+
+  h2 {
+    font-size: 1.9rem;
+    font-weight: 500;
+  }
+}
