--- a/src/app/components/atoms/tab-button/tab-button.css
+++ b/src/app/components/atoms/tab-button/tab-button.css
@@ -6,6 +6,8 @@
   font-size: 1rem;
   cursor: pointer;
   border-bottom: 4px solid transparent;
+  font-family: Rubik, sans-serif;
+
 }
 
 .tab:hover {
