Mobile and styles debugging WIP

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,12 +1,11 @@
   
 <app-desktop-header-section></app-desktop-header-section>
-  <main>
-    <app-herobanner-section></app-herobanner-section>
-      
-    <app-features-section
-        [sectionTitle]="'Features'">
-    </app-features-section>
 
-    <app-extensions-section></app-extensions-section>
-  </main>
-  
+<main>
+  <app-herobanner-section></app-herobanner-section>
+    
+  <app-features-section></app-features-section>
+
+  <app-extensions-section></app-extensions-section>
+</main>
+
