--- a/src/app/components/molecules/hero-image/hero-image.html
+++ b/src/app/components/molecules/hero-image/hero-image.html
@@ -1,7 +1,6 @@
- <span class="hero-image">
+<span class="hero-image">
   <app-image 
     [src]="imageSrc" 
-    [alt]="imageAlt" 
-    cssClass="illustration-class">
+    [alt]="imageAlt">
   </app-image>
- </span>
+</span>
