--- a/src/app/components/organisms/herobanner-section/herobanner-section.css
+++ b/src/app/components/organisms/herobanner-section/herobanner-section.css
@@ -19,27 +19,23 @@
   gap: 1rem;
 }
 
-
-/* PENDING TO RESOLVE
- .hero-image {
-  order: -1; 
-} */
-
 @media screen and (max-width: 768px) {
   .hero-grid {
     grid-template-columns: 1fr;
     text-align: center;
-    padding: 0 1.5rem
+    padding: 0 1.5rem;
+    justify-content: center;
   }
 
   .hero-image {
     order: -1; 
+    max-width: fit-content
   }
 
   .hero-buttons {
-  font-size: 1.1rem;
-  margin-top: 2rem;
-  justify-content: center;
+    font-size: 1.1rem;
+    margin-top: 2rem;
+    justify-content: center;
   }
 
   .hero-buttons .btn {
