--- a/src/app/components/molecules/footer-leads/footer-leads.css
+++ b/src/app/components/molecules/footer-leads/footer-leads.css
@@ -9,7 +9,6 @@
 .newsletter-form {
     max-width: 656px;   
     margin: 1rem auto 0 auto; 
-    display: flex;
     gap: 0.75rem;
     flex-wrap: nowrap; 
 }
@@ -19,7 +18,7 @@
     padding: 1rem;
     border-radius: 5px;
     border: none;
-    font-size: 18px;
+    font-size: 15px;
     letter-spacing: 1px;
 }
 
@@ -42,7 +41,7 @@
     margin: 1rem auto 0 auto;
 }
 
-input[type=email] {
+.input {
     font-size: 18px;
     letter-spacing: 1px;
 }
@@ -51,5 +50,26 @@ input[type=email] {
     .newsletter h2 {
         max-width: none;
         margin: none;
+    }
+
+    .newsletter-form {
+        max-width: 656px;   
+        margin: 1rem auto 0 auto; 
+        display: flex;
+        flex-direction: column;
+        gap: 0.75rem;
+        flex-wrap: wrap; 
+        align-items: center;
+
+    }
+
+    .newsletter-form input {
+        max-width: 300px;   
+        flex: 0.5rem;             
+        padding: 1rem;
+        border-radius: 5px;
+        border: none;
+        font-size: 15px;
+        letter-spacing: 1px;
     }
 }
