--- a/src/app/components/molecules/footer-leads/footer-leads.html
+++ b/src/app/components/molecules/footer-leads/footer-leads.html
@@ -2,8 +2,17 @@
     <p class="subheading">35,000+ already joined</p>
     <h2>Stay up-to-date with what we're doing</h2>
     <form class="newsletter-form">
-    <input 
-    type="email" placeholder="Enter your email address" required />
-    <button type="submit" class="btn btn-red btn-contact">Contact Us</button>
+        <input 
+        class="input" type="email" placeholder="Enter your email address" required />
+        
+        <app-button
+            variant = red
+            text = 'Contact'
+            type = 'submit'
+            additionalClasses="btn btn-red btn-contact"
+        ></app-button>
     </form>
 </div> 
+
+
+<!-- <button type="submit" class="btn btn-red btn-contact">Contact Us</button> -->
