--- a/src/app/components/molecules/footer-bottom/footer-bottom.html
+++ b/src/app/components/molecules/footer-bottom/footer-bottom.html
@@ -1,6 +1,6 @@
 <div class="footer-bottom">
     <div class="footer-logo-menu">
-        <img src="assets/logos/logo-bookmark.svg" alt="Bookmark Logo"/>
+        <img src="assets/logos/logo-negative.png" alt="Bookmark Logo" class="footer-logo"/>
         <nav>
             <ul class="footer-menu">
                 <li><a href="#features">Features</a></li>
