--- a/src/app/components/molecules/mobile-nav/mobile-nav.css
+++ b/src/app/components/molecules/mobile-nav/mobile-nav.css
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: rgba(39, 43, 76, 0.95);
   z-index: 1000;
   display: flex;
@@ -22,7 +22,7 @@
 .mobile-menu-header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
   padding: 20px 30px;
 }
 
