Herobanner refactorization WIP

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,6 @@
   
 <app-desktop-header-section></app-desktop-header-section>
+<app-first-section></app-first-section>
 
 <main>
   <app-herobanner-section></app-herobanner-section>
