refactorization hero ready

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,9 @@
   
 <app-desktop-header-section></app-desktop-header-section>
-<app-first-section></app-first-section>
 
 <main>
-  <app-herobanner-section></app-herobanner-section>
+  <app-first-section></app-first-section>
+  <!-- <app-herobanner-section></app-herobanner-section> -->
     
   <app-features-section></app-features-section>
 
