--- a/src/app/components/molecules/features-content/features-content.html
+++ b/src/app/components/molecules/features-content/features-content.html
@@ -1,26 +1,27 @@
-<div class="feature-content">
-  <div class="feature-image">
-    <app-featureimage 
-      [src]="imageSrc"
-      [alt]="imageAlt">
-    </app-featureimage>
-  </div>
-  
-  <div class="feature-text">
+<div class="container">
+  <div class="feature-content">
+    <div class="feature-image">
+      <app-featureimage 
+        [src]="imageSrc"
+        [alt]="imageAlt">
+      </app-featureimage>
+    </div>
     
-    <app-heading
-      [level]="2" 
-      [text]="title">
-    </app-heading>
-    
-    <app-text 
-      [content]="description">
-    </app-text>
-    
-    <app-button class="btn btn-blue btn-none"
-        variant="blue"
-        [href]="buttonHref"
-        [text]="buttonText">
-    </app-button>
+    <div class="feature-text">
+      <app-heading
+        [level]="2" 
+        [text]="title">
+      </app-heading>
+      
+      <app-text 
+        [content]="description">
+      </app-text>
+
+      <app-button class="btn btn-blue btn-none"
+          variant="blue"
+          [href]="buttonHref"
+          [text]="buttonText">
+      </app-button>
+    </div>
   </div>
 </div>
