--- a/src/app/components/molecules/features-content/features-content.css
+++ b/src/app/components/molecules/features-content/features-content.css
@@ -44,4 +44,11 @@
     display: none;
   }
 
+  .feature-image img {
+    max-width: 80%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
+
 }
